--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,8 @@ shoot.userprefs
 .vscode/
 
 # Not included in the project, these are by the license.
-
 Assets/Plugins/BulletXNA/
 Assets/Plugins/MMD4Mecanim/
 Assets/Resources/Models/つみ式ミクさんv1.1/
 Assets/Resources/Models/Tda式初音ミク・アペンドVer1.00/
+Assets/Resources/Motions/WAVEFILE_fullver/
