--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ Assets/Plugins/MMD4Mecanim/
 Assets/Resources/Models/つみ式ミクさんv1.1/
 Assets/Resources/Models/Tda式初音ミク・アペンドVer1.00/
 Assets/Resources/Motions/WAVEFILE_fullver/
+Assets/Resources/Motions/MMD4Mecanim/
