--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ Assets/Plugins/MMD4Mecanim/
 Assets/Models/つみ式ミクさんv1.1/
 Assets/Models/Tda式初音ミク・アペンドVer1.00/
 Assets/Motions/WAVEFILE_fullver/
+Assets/Motions/popipo/
